--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -1,11 +1,13 @@
 <div class="card">
-    <div class="card-body">
+    <div class="card-body"
+    #scrollMe
+    style="overflow: scroll; height: 450px;"
+    [scrollTop]="scrollMe.scrollHeight"
+    >
         <div *ngIf="(messageService.messageThread$ | async)?.length === 0">
             No messages yet... say hi by using the message box below
         </div>
-        <ul #scrollMe
-            style="overflow: scroll; height: 500px;"
-            [scrollTop]="scrollMe.scrollHeight"
+        <ul 
             *ngIf="(messageService.messageThread$ | async)?.length > 0" 
             class="chat">
             <li *ngFor="let message of (messageService.messageThread$ | async)">
@@ -41,8 +43,9 @@
                     type="text" 
                     class="form-control input-sm" placeholder="Send a private message">
                 <div class="input-group-append">
-                    <button [disabled]="!messageForm.valid" type="submit" class="btn btn-primary">
+                    <button [disabled]="!messageForm.valid || loading" type="submit" class="btn btn-primary">
                         Send
+                        <i *ngIf="loading"  class="fa fa-spinner fa-spin" ></i>
                     </button>
                 </div>
             </div>
